# template_cpp

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: main.yml
cmake/: CodeCoverage.cmake  KHTesting.cmake  mainKHTest.cpp
include/myProject/: foo.hpp
src/myProject/: CMakeLists.txt  foo.cpp
src/myProject/test/: CMakeLists.txt  test_foo.cpp
